Configure CI workflow for production-focused validation - Auto-run only on main branch pushes and PRs to main - Add manual trigger for on-demand testing during development - Eliminate CI noise during prototype development on feature branches

--- a/.github/workflows/walking-skeleton-smoke-test.yml
+++ b/.github/workflows/walking-skeleton-smoke-test.yml
@@ -2,9 +2,10 @@ name: Walking Skeleton Smoke Test
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]      # Auto-run on main only
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]      # Auto-run on PRs to main
+  workflow_dispatch:        # Manual trigger anytime
 
 jobs:
   smoke-test:
