Update .gitignore to exclude XML files from cj_ai_essay_assessment and modify GitHub Actions workflow to trigger on pull requests only. Add comprehensive CJ service integration documentation detailing the refactor of the comparative judgment prototype into a microservice. Modernize Docker Compose documentation to reflect v2 command usage and health check implementations, ensuring clarity and accuracy across all related files.

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ __pycache__/
 
 # temp_folders and temp_files used for testing or development
 cj_essay_assessment/
+cj_ai_essay_assessment/*.xml
 /*.xml
 
