WoofWoof Implement import fixes for CJ Assessment Service - Introduced a new script to automatically update import statements in Python files within the `cj_assessment_service` directory, ensuring they reference the correct service paths. Additionally, updated `pyproject.toml` to include core logic modules and enhanced documentation standards in the rules index. This change streamlines the import process and maintains compliance with project structure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -162,6 +162,7 @@ module = [
     "config", 
     "worker_main", 
     "core_logic", 
+    "core_logic.*",
     "event_router", 
     "event_processor",
     "protocols", 
