--- a/services/spell_checker_service/Dockerfile
+++ b/services/spell_checker_service/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONPATH=/app \
     ENV_TYPE=docker \
     LOG_LEVEL=INFO \
     KAFKA_BOOTSTRAP_SERVERS=kafka:9092 \
