WoofWoof Update MyPy configuration in `pyproject.toml` to include missing type stubs for the `transitions` library and the local `essay_state_machine` module. This change aligns with the coding standards by ensuring proper type checking while ignoring missing imports for these modules. The update enhances type safety and maintains compliance with project guidelines.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,8 @@ module = [
     "diskcache.*",
     "choix.*",
     "tenacity.*",
+    "transitions.*",  # State machine library without type stubs
+    "essay_state_machine",  # Local module without py.typed marker
 ]
 ignore_missing_imports = true
 
