Update `pyproject.toml` to include `enums_db` and `models_db` modules for improved type checking. Refactor model retrieval in various provider implementations to ensure consistent string conversion for default models. Enhance retry manager with a new `with_retry` method for streamlined operation execution with retry logic. Update tests to verify correct behavior and error handling in LLM provider overrides, ensuring comprehensive coverage and alignment with project standards.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,8 @@ module = [
     "diskcache.*",
     "choix.*",
     "tenacity.*",
+    "enums_db",       # Database enum module without type stubs
+    "models_db",      # Database models module without type stubs
 ]
 ignore_missing_imports = true
 
