--- a/services/batch_orchestrator_service/pyproject.toml
+++ b/services/batch_orchestrator_service/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "dishka",
     "quart-dishka",
     "transitions",
+    # Database dependencies for production repository
+    "SQLAlchemy[asyncio]",
+    "asyncpg",  # PostgreSQL async driver
 ]
 
 [build-system]
