--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
   huleedu_content_store_data:
   essay_lifecycle_data:
   batch_orchestrator_db_data:
+  essay_lifecycle_db_data:
 
 services:
   # PostgreSQL database for Batch Orchestrator Service
@@ -25,6 +26,28 @@ services:
       - batch_orchestrator_db_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U huleedu_user -d batch_orchestrator"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  # PostgreSQL database for Essay Lifecycle Service
+  essay_lifecycle_db:
+    image: postgres:15
+    container_name: huleedu_essay_lifecycle_db
+    restart: unless-stopped
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "5433:5432"  # Different port from BOS database
+    environment:
+      - POSTGRES_DB=essay_lifecycle
+      - POSTGRES_USER=huleedu_user
+      - POSTGRES_PASSWORD=REDACTED_DEFAULT_PASSWORD
+    volumes:
+      - essay_lifecycle_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U huleedu_user -d essay_lifecycle"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -197,6 +220,8 @@ services:
         condition: service_healthy
       file_service:
         condition: service_healthy
+      essay_lifecycle_db:
+        condition: service_healthy
     networks:
       - huleedu_internal_network
     ports:
@@ -208,7 +233,15 @@ services:
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - ESSAY_LIFECYCLE_SERVICE_HTTP_PORT=6000
       - ESSAY_LIFECYCLE_SERVICE_PROMETHEUS_PORT=9090
+      - ESSAY_LIFECYCLE_SERVICE_USE_MOCK_REPOSITORY=false  # Use PostgreSQL in production
       - ESSAY_LIFECYCLE_SERVICE_DATABASE_PATH=/data/essay_lifecycle/essay_lifecycle.db
+      # PostgreSQL configuration
+      - ELS_DATABASE_URL=postgresql+asyncpg://huleedu_user:REDACTED_DEFAULT_PASSWORD@essay_lifecycle_db:5432/essay_lifecycle
+      - ELS_DB_HOST=essay_lifecycle_db
+      - ELS_DB_PORT=5432
+      - ELS_DB_NAME=essay_lifecycle
+      - ELS_DB_USER=huleedu_user
+      - ELS_DB_PASSWORD=REDACTED_DEFAULT_PASSWORD
       - LOG_LEVEL=INFO
     volumes:
       - essay_lifecycle_data:/data/essay_lifecycle
@@ -233,13 +266,23 @@ services:
         condition: service_healthy
       file_service:
         condition: service_healthy
+      essay_lifecycle_db:
+        condition: service_healthy
     networks:
       - huleedu_internal_network
     environment:
       - ENV_TYPE=docker
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
+      - ESSAY_LIFECYCLE_SERVICE_USE_MOCK_REPOSITORY=false  # Use PostgreSQL in production
       - ESSAY_LIFECYCLE_SERVICE_DATABASE_PATH=/data/essay_lifecycle/essay_lifecycle.db
+      # PostgreSQL configuration
+      - ELS_DATABASE_URL=postgresql+asyncpg://huleedu_user:REDACTED_DEFAULT_PASSWORD@essay_lifecycle_db:5432/essay_lifecycle
+      - ELS_DB_HOST=essay_lifecycle_db
+      - ELS_DB_PORT=5432
+      - ELS_DB_NAME=essay_lifecycle
+      - ELS_DB_USER=huleedu_user
+      - ELS_DB_PASSWORD=REDACTED_DEFAULT_PASSWORD
       - LOG_LEVEL=INFO
     volumes:
       - essay_lifecycle_data:/data/essay_lifecycle
