Update Docker Compose and Dependency Management - Changed the environment variable for the Batch Orchestrator service port in the Docker Compose file to enhance clarity. Added new dependencies for async PostgreSQL support and SQLAlchemy with asyncio in the project. Introduced a new rule for service debugging and troubleshooting, emphasizing the importance of service configuration validation over import patterns. Updated the rule index to include the new debugging guidelines, ensuring comprehensive documentation for service development and maintenance.

--- a/services/batch_orchestrator_service/Dockerfile
+++ b/services/batch_orchestrator_service/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONPATH=/app \
     ENV_TYPE=docker \
     QUART_APP=app:app \
     QUART_ENV=production \
