--- a/services/essay_lifecycle_service/pyproject.toml
+++ b/services/essay_lifecycle_service/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "dishka",
     "quart-dishka",
     "transitions",
+    "sqlalchemy[asyncio]",
+    "asyncpg",
 ]
 
 [build-system]
