--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -191,7 +191,7 @@ services:
       - ENV_TYPE=docker
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
-      - PORT=5000
+      - BATCH_ORCHESTRATOR_SERVICE_PORT=5000
       - LOG_LEVEL=INFO
       # Database configuration
       - BATCH_ORCHESTRATOR_DB_HOST=batch_orchestrator_db
