Enhance Content Service Architecture - Introduced a new `startup_setup.py` for improved service initialization and dependency injection, aligning with the BOS pattern. Simplified `app.py` to reduce complexity and enhance maintainability. Added `metrics.py` for Prometheus metrics integration, ensuring proper metrics collection through DI. Updated Dockerfile to include `PYTHONPATH` for absolute imports. Added `quart-dishka` as a dependency for better DI management. Comprehensive validation confirms successful alignment and functionality preservation.

--- a/services/content_service/pyproject.toml
+++ b/services/content_service/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "quart",
+    "quart-dishka",
     "aiofiles",
     "hypercorn",
     "python-dotenv",
