--- a/services/file_service/Dockerfile
+++ b/services/file_service/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONPATH=/app \
     ENV_TYPE=docker \
     QUART_APP=app:app \
     QUART_ENV=production \
