Update Documentation and Enhance Testing Framework - Added new end-to-end testing scripts for the file upload and event monitoring processes, validating the complete workflow of the pipeline. Introduced comprehensive tests for spellcheck processing and pattern alignment validation, ensuring all services adhere to consistent patterns post-alignment. Updated the `pyproject.toml` to include new test markers for better categorization. Refined existing documentation to reflect recent changes and improve clarity on service architecture and testing strategies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -224,6 +224,8 @@ markers = [
     "integration: marks tests requiring external services like Kafka",
     "docker: marks tests that need docker-compose setup",
     "kafka: marks tests requiring a Kafka instance",
+    "e2e: marks tests as end-to-end pipeline tests",
+    "timeout: marks tests with specific timeout requirements",
 ]
 
 filterwarnings = [
