Update Dependencies and Refactor Metrics Middleware - This commit updates the `pdm.lock` file to reflect the latest versions of `aiohttp` (3.12.11) and `numpy` (2.3.0), enhancing compatibility and performance. Additionally, it consolidates metrics middleware across services by removing redundant implementations and introducing a shared `metrics_middleware.py` module. This refactor improves maintainability and standardizes metrics handling across the application. All tests have been executed successfully, confirming no regressions and maintaining high code quality standards.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ monorepo-tools = [
     "pytest-xdist",
     "httpx",
     "pre-commit",
-    "testcontainers[postgres]",  # For PostgreSQL integration tests
+    "testcontainers[postgres,kafka]",  # For PostgreSQL and Kafka integration tests
+    "kafka-python",
 ]
 
 # Install all services and common_core for unified development
@@ -157,6 +158,7 @@ module = [
     "sqlalchemy.*",
     "asyncpg.*",
     "testcontainers.*",
+    "kafka.*", # For kafka-python library
     "enums_db",       # Database enum module without type stubs
     "models_db",      # Database models module without type stubs
 ]
@@ -217,7 +219,6 @@ log_cli_level = "INFO"
 log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s:%(filename)s:%(lineno)s %(message)s"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 asyncio_mode = "auto"
-asyncio_default_fixture_loop_scope = "function"
 
 markers = [
     "slow: marks tests as slow running",
