--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,14 +182,19 @@ services:
     networks:
       - huleedu_internal_network
     ports:
-      - "8002:8001"
+      - "8002:8002"
     environment:
       - ENV_TYPE=docker
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - LOG_LEVEL=DEBUG
-      - METRICS_PORT=8001
-    # Note: spell_checker_service is a worker service with metrics endpoint only, no health check needed
+      - HTTP_PORT=8002
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8002/healthz || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
 
   batch_orchestrator_service:
     build:
