Enhance File Event Models and Update ContentType Enum - This commit introduces new fields to the `EssayContentProvisionedV1` and `EssayValidationFailedV1` models to include `raw_file_storage_id`, enhancing traceability for raw file handling. Additionally, the `ContentType` enum is updated with new variants for raw uploads and extracted plaintext, improving clarity in file processing. Comprehensive unit tests have been added to validate these changes, confirming no regressions and maintaining high code quality standards.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ volumes:
   batch_orchestrator_db_data:
   essay_lifecycle_db_data:
   cj_assessment_db_data:
+  redis_data:
 
 services:
   # PostgreSQL database for Batch Orchestrator Service
@@ -75,6 +76,25 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+
+  # Redis cache for idempotency and session management
+  redis:
+    image: redis:7-alpine
+    container_name: huleedu_redis
+    restart: unless-stopped
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   zookeeper:
     image: bitnami/zookeeper:3.9
