--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,6 +159,7 @@ module = [
     "asyncpg.*",
     "testcontainers.*",
     "kafka.*", # For kafka-python library
+    "redis.*",  # Redis client library
     "enums_db",       # Database enum module without type stubs
     "models_db",      # Database models module without type stubs
 ]
