Update Docker and Configuration Files for Redis Integration - This commit enhances the Docker configuration by adding Redis service health checks and updates the  and  files to exclude the new  directory. Additionally, it introduces Redis client protocols and configurations across multiple services, ensuring proper dependency injection for idempotency operations. Comprehensive unit and integration tests have been added to validate these changes, confirming no regressions and maintaining high code quality standards.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__/
 **/.env
 .DS_Store
 .vscode/settings.json
+.md-to-html-converter/
 
 # temp_folders and temp_files used for testing or development
 cj_essay_assessment/
